# btop-beautifier

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
docs/superpowers/plans/: 2026-05-08-btop-beautifier.md
docs/superpowers/specs/: 2026-05-08-btop-beautifier-design.md
pkg/aur/: README.md
pkg/aur/btop-beautifier/: .SRCINFO  PKGBUILD
pkg/aur/btop-beautifier-bin/: .SRCINFO  PKGBUILD
src/: cpu.rs  lib.rs  main.rs  memory.rs  net.rs  pattern.rs  ratelimit.rs
tests/: smoke.rs
