[package]
name = "btop-beautifier"
version = "0.1.0"
edition = "2021"
description = "Drive CPU, memory, and loopback network in sine-wave patterns to make btop look beautiful"

[[bin]]
name = "btop-beautifier"
path = "src/main.rs"

[lib]
name = "btop_beautifier"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
core_affinity = "0.8"
nix = { version = "0.29", features = ["mman"] }
signal-hook = "0.3"
rand = "0.8"
rand_pcg = "0.3"
humantime = "2.1"
bytesize = "1.3"

[profile.release]
opt-level = 3
lto = "thin"
