[package]
name = "btop-beautifier"
version = "0.1.0"
edition = "2021"
description = "Drive CPU, memory, and loopback network in sine-wave patterns to make btop look beautiful"
authors = ["M Avdi <mehdi.avdi@gmail.com>"]
license = "MIT"
repository = "https://github.com/mavdi/btop-beautifier"
homepage = "https://github.com/mavdi/btop-beautifier"
readme = "README.md"
keywords = ["btop", "demo", "system-monitor", "visualization", "cli"]
categories = ["command-line-utilities", "visualization"]
rust-version = "1.70"

[[bin]]
name = "btop-beautifier"
path = "src/main.rs"

[lib]
name = "btop_beautifier"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
core_affinity = "0.8"
nix = { version = "0.29", features = ["mman"] }
signal-hook = "0.3"
rand = "0.8"
rand_pcg = "0.3"
humantime = "2.1"
bytesize = "1.3"

[profile.release]
opt-level = 3
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
